--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container" style="color:azure;background-color: black; width: 100%;">
-        <h1 >Hie this is me coding from mac super fast awesomes</h1>
+        <h1 >Hie i'm on new branch</h1>
 
         
     </div>
