--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container" style="color:azure;background-color: black; width: 100%;">
         <h1 >Hie i'm on new branch</h1>
-
+        <h1>merged</h1>
         
     </div>
     
